welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:40: error: not found: value faireI
					faireI(Color.YELLOW);
                                        ^PatternPicture:42: error: not found: value faireI
					faireI(Color.RED);
                                        ^PatternPicture:44: error: not found: value faireI
					faireI(Color.BLUE);
                                        ^PatternPicture:46: error: not found: value faireI
					faireI(Color.GREEN);
                                        ^